--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,7 @@
 	    "experimentalDecorators": true,
 	    "allowJs": false,
 		"listFiles": false,
-		"downlevelIteration": true,
+		"downlevelIteration": false,
 		"lib": [
 			"es2015.symbol.wellknown",
 			"dom",
@@ -33,7 +33,7 @@
 		"./typings/**/*.d.ts"
 	],
 	"exclude": [
-		"./src/test/**/*.ts",
+		"**/__tests__/**/*.ts",
 		"./src/lib/wip/**/*.ts"
 	]
 }
