--- a/tsconfig.es6.json
+++ b/tsconfig.es6.json
@@ -31,7 +31,7 @@
 		"./typings/**/*.d.ts"
 	],
 	"exclude": [
-		"./src/test/**/*.ts",
+		"./src/__test__/**/*.ts",
 		"./src/lib/wip/**/*.ts"
 	]
 }
