--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "goodcore",
-  "version": "0.26.0",
+  "version": "0.26.2",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
-  "main": "goodcore.bundle.min.js",
-  "module": "index.js",
+  "main": "index.js",
   "typings": "goodcore.d.ts",
   "unpkg": "goodcore.bundle.js",
   "files": [
