--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
 		"outDir": "./dist",
 	    "sourceMap": true,
 	    "target": "es5",
-	    "module": "es2015",
+	    "module": "commonjs",
 	    "moduleResolution": "node",
 	    "declaration": false,
 	    "noImplicitAny": true,
