added a lite version of the iife bundle to be used for data processing serverside

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -34,6 +34,7 @@
 	],
 	"exclude": [
 		"**/__tests__/**/*.ts",
-		"./src/lib/wip/**/*.ts"
+		"./src/lib/wip/**/*.ts",
+		"./src/lib/GoodCoreList.ts"
 	]
 }
