--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,39 +1,51 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
+    "version": "2.0.0",
     "command": "yarn",
-    "isShellCommand": true,
-    "suppressTaskName": true,
     "tasks": [
         {
-            // Build task, Ctrl+Shift+B
-            "taskName": "build",
-            "isBuildCommand": true,
-            "showOutput": "always",
-            "args": ["run", "build"]
+            "label": "build",
+            "type": "shell",
+            "args": [
+                "run",
+                "build"
+            ],
+            "problemMatcher": [],
+            "group": "build"
         },
         {
-            // Test task, Ctrl+Shift+T
+            "label": "test",
+            "type": "shell",
             "command": "yarn",
-            "taskName": "test",
-            "isTestCommand": true,
-            "showOutput": "always",
-            "args": ["run", "test"]
+            "args": [
+                "run",
+                "test"
+            ],
+            "problemMatcher": [],
+            "group": "test"
         },
         {
+            "label": "cover",
+            "type": "shell",
             "command": "yarn",
-            "taskName": "cover",
-            "isTestCommand": true,
-            "showOutput": "always",
-            "args": ["run", "cover"]
+            "args": [
+                "run",
+                "cover"
+            ],
+            "problemMatcher": [],
+            "group": "test"
         },
         {
+            "label": "all",
+            "type": "shell",
             "command": "yarn",
-            "taskName": "all",
-            "isTestCommand": true,
-            "showOutput": "always",
-            "args": ["run", "all"]
+            "args": [
+                "run",
+                "all"
+            ],
+            "problemMatcher": [],
+            "group": "test"
         }
     ]
 }
