--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "0.36.5",
+  "version": "1.0.0",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "index.js",
   "typings": "goodcore.d.ts",
@@ -8,65 +8,58 @@
   "files": [
     "*"
   ],
+  "type": "module",
   "scripts": {
     "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
     "dev": "npm run clean && tsc -p tsconfig.app.json",
     "build": "npm run clean && tsc -p tsconfig.app.json && rollup -c && gulp copyDTS && gulp copyWebpackExternalsFn",
     "build-lite": "rollup -c rollup.lite.js",
-    "build-es": "tsc -p tsconfig.es6.json && gulp copyDTSES",
-    "build-all": "npm run build && npm run build-es && npm run build-lite",
+    "build-all": "npm run build && npm run build-lite",
     "bench": "tsc -p tsconfig.bench.json && node ./dist/benchmark/index.js",
     "test": "jest",
     "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
     "cover": "jest --coverage",
     "deploy": "gulp package && npm publish dist/lib",
-    "deploy-es": "gulp copyReadmeES && gulp packageES && npm publish distES/lib",
-    "deploy-all": "npm run deploy && npm run deploy-es"
+    "deploy-all": "npm run deploy"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-external-helpers": "^7.12.1",
-    "@babel/plugin-transform-member-expression-literals": "^7.12.1",
-    "@babel/plugin-transform-property-literals": "^7.12.1",
-    "@babel/plugin-transform-property-mutators": "^7.12.1",
-    "@babel/plugin-transform-reserved-words": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@types/benchmark": "^1.0.33",
-    "@types/jest": "^24.9.1",
-    "@types/jsdom": "^12.2.4",
-    "@types/lodash": "^4.14.167",
-    "@types/node": "^12.19.11",
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-external-helpers": "^7.18.6",
+    "@babel/plugin-transform-member-expression-literals": "^7.18.6",
+    "@babel/plugin-transform-property-literals": "^7.18.6",
+    "@babel/plugin-transform-property-mutators": "^7.20.7",
+    "@babel/plugin-transform-reserved-words": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "6.0.3",
+    "@rollup/plugin-commonjs": "24.0.0",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-terser": "0.3.0",
+    "@rollup/plugin-typescript": "11.0.0",
+    "@types/benchmark": "^2.1.2",
+    "@types/jest": "^29.2.5",
+    "@types/jsdom": "^20.0.1",
+    "@types/node": "^18.11.18",
     "base64-js": "^1.5.1",
     "benchmark": "^2.1.4",
-    "chalk": "^2.4.2",
-    "coveralls": "^3.1.0",
+    "chalk": "^5.2.0",
+    "coveralls": "^3.1.1",
+    "eslint": "8.31.0",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "ieee754": "^1.2.1",
     "isarray": "^2.0.5",
-    "istanbul": "^0.4.5",
-    "jest": "^26.6.3",
-    "jsdom": "^16.4.0",
-    "lodash": "^4.17.20",
-    "natives": "^1.1.6",
-    "process": "^0.11.10",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "jsdom": "^21.0.0",
+    "prettier": "2.8.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.36.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.4",
-    "ts-jest": "^26.4.4",
+    "rollup": "^3.9.1",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.1.0",
-    "tslint": "^6.1.3",
-    "tslint-language-service": "^0.9.9",
-    "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.9.4"
   },
   "bugs": {
     "url": "https://github.com/allnamesrtaken/goodcore/issues"
