--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,33 @@
 {
-    "compilerOptions": {
-	    "rootDir": "./src",
-		"outDir": "./dist",
-	    "sourceMap": true,
-	    "target": "es5",
-	    "module": "es2015",
-	    "moduleResolution": "node",
-	    "declaration": false,
-	    "noImplicitAny": true,
-		"noImplicitThis": false,
-		"strictNullChecks": true,
-	    "noResolve": false,
-	    "removeComments": true,
-	    "noLib": false,
-	    "preserveConstEnums": true,
-		"emitDecoratorMetadata": true,
-	    "experimentalDecorators": true,
-	    "allowJs": false,
-		"listFiles": false,
-		"downlevelIteration": true,
-		"lib": [
-			"dom",
-			"es5",
-			"es6",
-            "es2015.promise",
-			"scripthost"
-		],
-		"plugins": [
-			{
-				"name": "tslint-language-service"
-			}
-		]
-    },
-	"include": [
-		"./test.ts",
-		"./src/**/*.ts",
-		"./src/test/**/*.ts",
-		"./typings/**/*.d.ts"
-	],
-	"exclude": [
-		"./src/lib/wip/**/*.ts"
-	]
+  "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "sourceMap": true,
+    "target": "ES2021",
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "declaration": false,
+    "noImplicitAny": true,
+    "noImplicitThis": false,
+    "strictNullChecks": true,
+    "noResolve": false,
+    "removeComments": true,
+    "noLib": false,
+    "preserveConstEnums": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowJs": false,
+    "listFiles": false,
+    "downlevelIteration": false,
+		"esModuleInterop": true,
+    "lib": ["dom", "ES2021", "ES2021.Promise", "ES2021.String", "scripthost"],
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "baseUrl": "."
+  },
+  "include": [
+    // "./test.ts",
+    "./src/**/*.ts",
+    "./src/test/**/*.ts",
+  ],
+  "exclude": ["./src/lib/wip/**/*.ts"]
 }
