--- a/tsconfig.lite.json
+++ b/tsconfig.lite.json
@@ -1,39 +1,29 @@
 {
-    "compilerOptions": {
-	    "rootDir": "./src",
-		"outDir": "./dist",
-	    "sourceMap": true,
-	    "target": "es6",
-	    "module": "commonjs",
-	    "moduleResolution": "node",
-	    "declaration": false,
-	    "noImplicitAny": true,
-		"noImplicitThis": false,
-		"strictNullChecks": true,
-	    "noResolve": false,
-	    "removeComments": true,
-	    "noLib": false,
-	    "preserveConstEnums": true,
-		"emitDecoratorMetadata": true,
-	    "experimentalDecorators": true,
-	    "allowJs": false,
-		"listFiles": false,
-		"downlevelIteration": false,
-		"lib": [
-			"es2015.symbol.wellknown",
-			"dom",
-			"es5",
-			"es6",
-            "es2015.promise",
-			"scripthost"
-        ]
-    },
-	"include": [
-		"./src/lib/GoodCoreList.ts",
-		"./typings/**/*.d.ts"
-	],
-	"exclude": [
-		"**/__tests__/**/*.ts",
-		"./src/lib/wip/**/*.ts"
-	]
+  "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "sourceMap": true,
+    "target": "ES2021",
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "declaration": false,
+    "noImplicitAny": true,
+    "noImplicitThis": false,
+    "strictNullChecks": true,
+    "noResolve": false,
+    "removeComments": true,
+    "noLib": false,
+    "preserveConstEnums": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowJs": false,
+    "listFiles": false,
+    "downlevelIteration": false,
+		"esModuleInterop": true,
+    "lib": ["dom", "ES2021", "ES2021.Promise", "ES2021.String", "scripthost"],
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "baseUrl": "."
+  },
+  "include": ["./src/lib/GoodCoreLite.ts", "./src/@types/*.ts"],
+  "exclude": ["**/__tests__/**/*.ts", "./src/lib/wip/**/*.ts"]
 }
