--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test": "jest",
     "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
     "cover": "jest --coverage",
-    "deploy": "gulp package && npm publish dist/lib",
-    "deploy-all": "npm run deploy"
+    "deploy": "gulp package && npm publish dist/lib"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
