--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "index.js",
   "typings": "goodcore.d.ts",
@@ -23,42 +23,43 @@
     "deploy": "gulp package && npm publish dist/lib"
   },
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-external-helpers": "^7.18.6",
-    "@babel/plugin-transform-member-expression-literals": "^7.18.6",
-    "@babel/plugin-transform-property-literals": "^7.18.6",
-    "@babel/plugin-transform-property-mutators": "^7.20.7",
-    "@babel/plugin-transform-reserved-words": "^7.18.6",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.11",
+    "@babel/plugin-external-helpers": "^7.22.5",
+    "@babel/plugin-transform-member-expression-literals": "^7.22.5",
+    "@babel/plugin-transform-property-literals": "^7.22.5",
+    "@babel/plugin-transform-property-mutators": "^7.22.5",
+    "@babel/plugin-transform-reserved-words": "^7.22.5",
+    "@babel/preset-env": "^7.22.14",
     "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "24.0.0",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-terser": "0.3.0",
-    "@rollup/plugin-typescript": "11.0.0",
+    "@rollup/plugin-commonjs": "25.0.4",
+    "@rollup/plugin-node-resolve": "15.2.1",
+    "@rollup/plugin-terser": "0.4.3",
+    "@rollup/plugin-typescript": "11.1.3",
     "@types/benchmark": "^2.1.2",
-    "@types/jest": "^29.2.5",
-    "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.11.18",
+    "@types/jest": "^29.5.4",
+    "@types/jsdom": "^21.1.2",
+    "@types/node": "^20.5.7",
     "base64-js": "^1.5.1",
     "benchmark": "^2.1.4",
-    "chalk": "^5.2.0",
+    "chalk": "^5.3.0",
     "coveralls": "^3.1.1",
-    "eslint": "8.31.0",
+    "eslint": "8.48.0",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "ieee754": "^1.2.1",
     "isarray": "^2.0.5",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "29.3.1",
-    "jsdom": "^21.0.0",
-    "prettier": "2.8.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^3.9.1",
-    "ts-jest": "^29.0.3",
-    "tslib": "^2.1.0",
-    "typescript": "^4.9.4"
+    "jest": "^29.6.4",
+    "jest-ts-webcompat-resolver": "^1.0.0",
+    "jest-environment-jsdom": "^29.6.4",
+    "jsdom": "^22.1.0",
+    "prettier": "3.0.3",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.28.1",
+    "ts-jest": "^29.1.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   },
   "bugs": {
     "url": "https://github.com/allnamesrtaken/goodcore/issues"
