--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "1.0.3",
+  "version": "1.1.1",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "index.js",
   "typings": "goodcore.d.ts",
@@ -20,7 +20,7 @@
     "test": "jest",
     "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
     "cover": "jest --coverage",
-    "deploy": "gulp package && npm publish dist/lib"
+    "deploy": "gulp package && npm publish dist\\lib"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
