--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goodcore",
-  "version": "1.1.7",
+  "version": "1.1.7citgit ",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "index.js",
   "typings": "goodcore.d.ts",
@@ -31,35 +31,35 @@
     "@babel/plugin-transform-property-mutators": "^7.22.5",
     "@babel/plugin-transform-reserved-words": "^7.22.5",
     "@babel/preset-env": "^7.22.14",
-    "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.4",
-    "@rollup/plugin-node-resolve": "15.2.1",
-    "@rollup/plugin-terser": "0.4.3",
-    "@rollup/plugin-typescript": "11.1.3",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-commonjs": "28.0.1",
+    "@rollup/plugin-node-resolve": "15.3.0",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "12.1.1",
     "@types/benchmark": "^2.1.2",
     "@types/jest": "^29.5.4",
     "@types/jsdom": "^21.1.2",
-    "@types/node": "^20.5.7",
-    "base64-js": "^1.5.1",
-    "benchmark": "^2.1.4",
-    "chalk": "^5.3.0",
-    "coveralls": "^3.1.1",
-    "eslint": "8.48.0",
-    "esm": "^3.2.25",
-    "gulp": "^4.0.2",
-    "gulp-rename": "^2.0.0",
-    "ieee754": "^1.2.1",
-    "isarray": "^2.0.5",
-    "jest": "^29.6.4",
-    "jest-ts-webcompat-resolver": "^1.0.0",
-    "jest-environment-jsdom": "^29.6.4",
-    "jsdom": "^22.1.0",
-    "prettier": "3.0.3",
-    "rimraf": "^5.0.1",
-    "rollup": "^3.28.1",
-    "ts-jest": "^29.1.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "@types/node": "22.10.1",
+    "base64-js": "1.5.1",
+    "benchmark": "2.1.4",
+    "chalk": "5.3.0",
+    "coveralls": "3.1.1",
+    "eslint": "9.16.0",
+    "esm": "3.2.25",
+    "gulp": "5.0.0",
+    "gulp-rename": "2.0.0",
+    "ieee754": "1.2.1",
+    "isarray": "2.0.5",
+    "jest": "29.7.0",
+    "jest-ts-webcompat-resolver": "1.0.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jsdom": "25.0.1",
+    "prettier": "3.4.1",
+    "rimraf": "^6.0.1",
+    "rollup": "4.28.0",
+    "ts-jest": "29.2.5",
+    "tslib": "2.8.1",
+    "typescript": "5.7.2"
   },
   "bugs": {
     "url": "https://github.com/allnamesrtaken/goodcore/issues"
