It is 2025 and time to remove deprecated functions, and deprecate those that are now slower than the built in Array functions in node 22+. Also updated all dev deps and made sure all tests work.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,8 @@
     "downlevelIteration": false,
     "esModuleInterop": true,
     "lib": ["dom", "ES2021", "ES2021.Promise", "ES2021.String", "scripthost"],
-    "typeRoots": ["./node_modules/@types", "./src/@types"],
+    // "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "types": ["@types/node", "./src/@types/custom.d.ts"],
     "baseUrl": "."
   },
   "include": ["./src/**/*.ts"],
