--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "sourceMap": true,
     "target": "ES2021",
     "module": "ES2020",
-    "moduleResolution": "node",
-    "declaration": false,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
+    "declaration": true,
     "noImplicitAny": true,
     "noImplicitThis": false,
     "strictNullChecks": true,
