--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
-dist/
-distES/
-node_modules/
-temp/
-coverage/
-typings/globals/
-typings/modules/
-typings/index.d.ts
-npm-debug.log
-package-lock.json
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
