--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "goodcore",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Some core functions and helper classes. List, Dictionary, Stack, Vec2, Rect, Range2, Tree. Optimized for speed and memory efficiency. Also an object pool a few mixins and Helpers for Dom, Array and Object manipulation + general",
   "main": "index.js",
-  "typings": "goodcore.d.ts",
+  "typings": "index.d.ts",
   "unpkg": "goodcore.bundle.js",
   "files": [
     "*"
   ],
   "type": "module",
   "scripts": {
-    "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
-    "dev": "npm run clean && tsc -p tsconfig.app.json",
-    "build": "npm run clean && tsc -p tsconfig.app.json && rollup -c && gulp copyDTS && gulp copyWebpackExternalsFn",
-    "build-lite": "rollup -c rollup.lite.js",
-    "build-all": "npm run build && npm run build-lite",
-    "bench": "tsc -p tsconfig.bench.json && node ./dist/benchmark/index.js",
-    "test": "jest",
-    "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
-    "cover": "jest --coverage",
-    "deploy": "gulp package && npm publish dist\\lib"
+    "coverage": "vitest run --coverage",
+    "deploy": "gulp package && npm publish dist\\lib",
+    "dev": "vite",
+    "build": "npm run clean && npm run build-bundle",
+    "build-bundle": "vite build --config vite-full-bundle.config.js",
+    "build-es": "vite build --config vite-full-es.config.js",
+    "build-lite": "vite build --config vite-lite.config.js",
+    "build-all": "npm run clean && tsc -p tsconfig.full.json && npm run build-lite && npm run build-bundle && npm run build-es && gulp copyDTS && gulp copyWebpackExternalsFn",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest - watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.27.2",
@@ -31,48 +32,22 @@
     "@babel/plugin-transform-property-mutators": "^7.27.1",
     "@babel/plugin-transform-reserved-words": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
-    "@rollup/plugin-babel": "6.0.4",
-    "@rollup/plugin-commonjs": "28.0.6",
-    "@rollup/plugin-node-resolve": "16.0.1",
-    "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "12.1.3",
     "@types/benchmark": "^2.1.5",
-    "@types/jest": "^29.5.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "24.0.3",
-    "base64-js": "1.5.1",
+    "@types/node": "24.0.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "benchmark": "2.1.4",
     "chalk": "5.4.1",
-    "coveralls": "3.1.1",
     "eslint": "9.29.0",
-    "esm": "3.2.25",
     "gulp": "5.0.1",
     "gulp-rename": "2.0.0",
-    "ieee754": "1.2.1",
-    "isarray": "2.0.5",
-    "jest": "30.0.2",
-    "jest-ts-webcompat-resolver": "1.0.1",
-    "jest-environment-jsdom": "30.0.2",
     "jsdom": "26.1.0",
-    "prettier": "3.6.0",
+    "prettier": "3.6.1",
     "rimraf": "^6.0.1",
-    "rollup": "4.44.0",
-    "ts-jest": "29.4.0",
-    "tslib": "2.8.1",
-    "typescript": "5.8.3"
-  },
-  "bugs": {
-    "url": "https://github.com/allnamesrtaken/goodcore/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/allnamesrtaken/goodcore.git"
-  },
-  "homepage": "https://github.com/allnamesrtaken/goodcore#readme",
-  "keywords": [
-    "Typescript",
-    "Javascript"
-  ],
-  "author": "Joel Brage",
-  "license": "MIT"
+    "typescript": "~5.8.3",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^3.2.4"
+  }
 }
