Moved to nodenext to support both node web

--- a/tsconfig.full.json
+++ b/tsconfig.full.json
@@ -4,8 +4,8 @@
     "outDir": "./dist",
     "sourceMap": true,
     "target": "ES2021",
-    "module": "ES2020",
-    "moduleResolution": "bundler",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "allowImportingTsExtensions": false,
     "emitDeclarationOnly": false,
     "declaration": true,
