--- a/tsconfig.bench.json
+++ b/tsconfig.bench.json
@@ -4,8 +4,8 @@
     "outDir": "./dist",
     "sourceMap": false,
     "target": "ES2021",
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "declaration": false,
     "noImplicitAny": true,
     "noResolve": false,
